--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 			<name>Apache License, Version 2.0</name>
 			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
 			<comments>
-				Copyright 2017 the original author or authors.
+				Copyright 2017-2019 the original author or authors.
 
 				Licensed under the Apache License, Version 2.0 (the "License");
 				you may not use this file except in compliance with the License.
@@ -73,23 +73,10 @@
 
 		<evo.version>1.2.2</evo.version>
 		<spring-hateoas.version>1.0.0.BUILD-SNAPSHOT</spring-hateoas.version>
-		<spring-plugin.version>2.0.0.BUILD-SNAPSHOT</spring-plugin.version>
+		<spring-plugin.version>2.0.0.M1</spring-plugin.version>
 	</properties>
 
 	<profiles>
-
-		<profile>
-			<id>spring52-next</id>
-			<properties>
-				<spring.version>5.2.0.BUILD-SNAPSHOT</spring.version>
-			</properties>
-			<repositories>
-				<repository>
-					<id>spring-libs-snapshot</id>
-					<url>https://repo.spring.io/libs-snapshot</url>
-				</repository>
-			</repositories>
-		</profile>
 
 		<profile>
 			<id>snapshot</id>
